tests/instantiating/invalid/range_prop_invalid_type/bus.fbd
Main bus
	C config; range = "str"
